MLOPS : add mlflow, some config file, dockerfile

--- a/sat2plan/notebooks/gaetan/dcgan.ipynb
+++ b/sat2plan/notebooks/gaetan/dcgan.ipynb
@@ -53,37 +53,39 @@
     "\n",
     "\n",
     "class Generator(nn.Module):\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, feature=64):\n",
     "        super(Generator, self).__init__()\n",
     "\n",
-    "        # self.init_size = img_size // 4\n",
-    "        self.init_size = img_size\n",
-    "\n",
+    "        self.init_size = img_size // 4  # Initial size before upsampling\n",
     "        self.l1 = nn.Sequential(\n",
-    "            nn.Linear(latent_dim, 128 * self.init_size ** 2))\n",
+    "            nn.Linear(channels * img_size * img_size, latent_dim))\n",
     "\n",
     "        self.conv_blocks = nn.Sequential(\n",
-    "            # nn.Upsample(scale_factor=2),\n",
-    "            nn.Conv2d(channels, 128, 3, stride=1, padding=1),\n",
-    "            nn.BatchNorm2d(128, 0.8),\n",
-    "            nn.LeakyReLU(0.2, inplace=True),\n",
-    "            nn.Conv2d(128, 128, 3, stride=1, padding=1),\n",
-    "            nn.BatchNorm2d(128, 0.8),\n",
-    "            nn.LeakyReLU(0.2, inplace=True),\n",
-    "            # nn.Upsample(scale_factor=2),\n",
-    "            nn.Conv2d(128, 64, 3, stride=1, padding=1),\n",
-    "            nn.BatchNorm2d(64, 0.8),\n",
-    "            nn.LeakyReLU(0.2, inplace=True),\n",
-    "            nn.Conv2d(64, channels, 3, stride=1, padding=1),\n",
-    "            nn.Tanh(),\n",
+    "\n",
+    "            nn.ConvTranspose2d(latent_dim, feature * 8, 4, 1, 0, bias=False),\n",
+    "            nn.BatchNorm2d(feature * 8),\n",
+    "            nn.ReLU(True),\n",
+    "            # state size. ``(ngf*8) x 4 x 4``\n",
+    "            nn.ConvTranspose2d(feature * 8, feature * 4, 4, 2, 1, bias=False),\n",
+    "            nn.BatchNorm2d(feature * 4),\n",
+    "            nn.ReLU(True),\n",
+    "            # state size. ``(ngf*4) x 8 x 8``\n",
+    "            nn.ConvTranspose2d(feature * 4, feature * 2, 4, 2, 1, bias=False),\n",
+    "            nn.BatchNorm2d(feature * 2),\n",
+    "            nn.ReLU(True),\n",
+    "            # state size. ``(ngf*2) x 16 x 16``\n",
+    "            nn.ConvTranspose2d(feature * 2, feature, 4, 2, 1, bias=False),\n",
+    "            nn.BatchNorm2d(feature),\n",
+    "            nn.ReLU(True),\n",
+    "            # state size. ``(ngf) x 32 x 32``\n",
+    "            nn.ConvTranspose2d(feature, channels, 4, 2, 1, bias=False),\n",
+    "            nn.Tanh()\n",
     "        )\n",
     "\n",
     "    def forward(self, z):\n",
-    "        # print(\"Z\", z.shape)\n",
-    "        # out = self.l1(z)\n",
-    "        # out = z.view(z.shape[0], 128, self.init_size, self.init_size)\n",
-    "        # print(\"OUT\", z.shape)\n",
-    "        img = self.conv_blocks(z)\n",
+    "        out = self.l1(z)\n",
+    "        out = out.view(out.shape[0], 128, self.init_size, self.init_size)\n",
+    "        img = self.conv_blocks(out)\n",
     "        # print(\"IMG\", img.shape)\n",
     "        return img\n",
     "\n",
@@ -112,11 +114,14 @@
     "            nn.Linear(128 * ds_size ** 2, 1), nn.Sigmoid())\n",
     "\n",
     "    def forward(self, img):\n",
+    "        print(img.shape)\n",
     "        out = self.model(img)\n",
+    "        print(out.shape)\n",
     "        out = out.view(out.shape[0], -1)\n",
     "        validity = self.adv_layer(out)\n",
     "\n",
     "        return validity\n",
+    "\n",
     "\n",
     "\n",
     "# Loss function\n",
@@ -247,7 +252,7 @@
     "    torch.save(generator.state_dict(),\n",
     "               f'models_checkpoint/generator.pth')\n",
     "    torch.save(discriminator.state_dict(),\n",
-    "               f'models_checkpoint/discriminator.pth')\n"
+    "               f'models_checkpoint/discriminator.pth')"
    ]
   }
  ],
